crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__code__memory_redundancy.snap
---
source: crates/dora-compiler/src/wasm/tests/code.rs
expression: op
snapshot_kind: text
---
module {
  func.func public @zero_everything(%arg0: !llvm.ptr) attributes {llvm.emit_c_interface} {
    %0 = llvm.getelementptr %arg0[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %1 = llvm.getelementptr %0[0] : (!llvm.ptr) -> !llvm.ptr, !llvm.ptr
    %2 = llvm.load %1 : !llvm.ptr -> !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c0_i32 = arith.constant 0 : i32
    %c0_i32_0 = arith.constant 0 : i32
    %c0_i64 = arith.constant 0 : i64
    %3 = arith.extui %c0_i32 : i32 to i64
    %4 = arith.addi %3, %c0_i64 : i64
    %5 = llvm.getelementptr %2[%4] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c0_i32_0, %5 : i32, !llvm.ptr
    %c4_i32 = arith.constant 4 : i32
    %c0_i32_1 = arith.constant 0 : i32
    %c0_i64_2 = arith.constant 0 : i64
    %6 = arith.extui %c4_i32 : i32 to i64
    %7 = arith.addi %6, %c0_i64_2 : i64
    %8 = llvm.getelementptr %2[%7] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c0_i32_1, %8 : i32, !llvm.ptr
    %c8_i32 = arith.constant 8 : i32
    %c0_i32_3 = arith.constant 0 : i32
    %c0_i64_4 = arith.constant 0 : i64
    %9 = arith.extui %c8_i32 : i32 to i64
    %10 = arith.addi %9, %c0_i64_4 : i64
    %11 = llvm.getelementptr %2[%10] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c0_i32_3, %11 : i32, !llvm.ptr
    %c12_i32 = arith.constant 12 : i32
    %c0_i32_5 = arith.constant 0 : i32
    %c0_i64_6 = arith.constant 0 : i64
    %12 = arith.extui %c12_i32 : i32 to i64
    %13 = arith.addi %12, %c0_i64_6 : i64
    %14 = llvm.getelementptr %2[%13] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c0_i32_5, %14 : i32, !llvm.ptr
    cf.br ^bb2
  ^bb2:  // pred: ^bb1
    return
  }
  func.func public @test_store_to_load(%arg0: !llvm.ptr) -> i32 attributes {llvm.emit_c_interface} {
    %0 = llvm.getelementptr %arg0[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %1 = llvm.getelementptr %0[0] : (!llvm.ptr) -> !llvm.ptr, !llvm.ptr
    %2 = llvm.load %1 : !llvm.ptr -> !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c8_i32 = arith.constant 8 : i32
    %c0_i32 = arith.constant 0 : i32
    %c0_i64 = arith.constant 0 : i64
    %3 = arith.extui %c8_i32 : i32 to i64
    %4 = arith.addi %3, %c0_i64 : i64
    %5 = llvm.getelementptr %2[%4] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c0_i32, %5 : i32, !llvm.ptr
    %c5_i32 = arith.constant 5 : i32
    %cst = arith.constant 2.14748365E+9 : f32
    %c0_i64_0 = arith.constant 0 : i64
    %6 = arith.extui %c5_i32 : i32 to i64
    %7 = arith.addi %6, %c0_i64_0 : i64
    %8 = llvm.getelementptr %2[%7] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %cst, %8 : f32, !llvm.ptr
    %c8_i32_1 = arith.constant 8 : i32
    %c0_i64_2 = arith.constant 0 : i64
    %9 = arith.extui %c8_i32_1 : i32 to i64
    %10 = arith.addi %9, %c0_i64_2 : i64
    %11 = llvm.getelementptr %2[%10] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    %12 = llvm.load %11 : !llvm.ptr -> i32
    cf.br ^bb2(%12 : i32)
  ^bb2(%13: i32):  // pred: ^bb1
    return %13 : i32
  }
  func.func public @test_redundant_load(%arg0: !llvm.ptr) -> i32 attributes {llvm.emit_c_interface} {
    %c0_i32 = arith.constant 0 : i32
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %1 : i32, !llvm.ptr
    %2 = llvm.getelementptr %arg0[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %3 = llvm.getelementptr %2[0] : (!llvm.ptr) -> !llvm.ptr, !llvm.ptr
    %4 = llvm.load %3 : !llvm.ptr -> !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c8_i32 = arith.constant 8 : i32
    %c0_i64 = arith.constant 0 : i64
    %5 = arith.extui %c8_i32 : i32 to i64
    %6 = arith.addi %5, %c0_i64 : i64
    %7 = llvm.getelementptr %4[%6] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    %8 = llvm.load %7 : !llvm.ptr -> i32
    llvm.store %8, %0 : i32, !llvm.ptr
    %c5_i32 = arith.constant 5 : i32
    %c-2147483648_i32 = arith.constant -2147483648 : i32
    %c0_i64_1 = arith.constant 0 : i64
    %9 = arith.extui %c5_i32 : i32 to i64
    %10 = arith.addi %9, %c0_i64_1 : i64
    %11 = llvm.getelementptr %4[%10] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c-2147483648_i32, %11 : i32, !llvm.ptr
    %c8_i32_2 = arith.constant 8 : i32
    %c0_i64_3 = arith.constant 0 : i64
    %12 = arith.extui %c8_i32_2 : i32 to i64
    %13 = arith.addi %12, %c0_i64_3 : i64
    %14 = llvm.getelementptr %4[%13] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    %15 = llvm.load %14 : !llvm.ptr -> i32
    llvm.store %15, %1 : i32, !llvm.ptr
    %16 = llvm.load %0 : !llvm.ptr -> i32
    %17 = llvm.load %1 : !llvm.ptr -> i32
    %18 = "wasm.add"(%16, %17) : (i32, i32) -> i32
    cf.br ^bb2(%18 : i32)
  ^bb2(%19: i32):  // pred: ^bb1
    return %19 : i32
  }
  func.func public @test_dead_store(%arg0: !llvm.ptr) -> f32 attributes {llvm.emit_c_interface} {
    %cst = arith.constant 0.000000e+00 : f32
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x f32 : (i64) -> !llvm.ptr
    llvm.store %cst, %0 : f32, !llvm.ptr
    %1 = llvm.getelementptr %arg0[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %2 = llvm.getelementptr %1[0] : (!llvm.ptr) -> !llvm.ptr, !llvm.ptr
    %3 = llvm.load %2 : !llvm.ptr -> !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c8_i32 = arith.constant 8 : i32
    %c589505315_i32 = arith.constant 589505315 : i32
    %c0_i64 = arith.constant 0 : i64
    %4 = arith.extui %c8_i32 : i32 to i64
    %5 = arith.addi %4, %c0_i64 : i64
    %6 = llvm.getelementptr %3[%5] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c589505315_i32, %6 : i32, !llvm.ptr
    %c11_i32 = arith.constant 11 : i32
    %c0_i64_0 = arith.constant 0 : i64
    %7 = arith.extui %c11_i32 : i32 to i64
    %8 = arith.addi %7, %c0_i64_0 : i64
    %9 = llvm.getelementptr %3[%8] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    %10 = llvm.load %9 : !llvm.ptr -> f32
    llvm.store %10, %0 : f32, !llvm.ptr
    %c8_i32_1 = arith.constant 8 : i32
    %c0_i32 = arith.constant 0 : i32
    %c0_i64_2 = arith.constant 0 : i64
    %11 = arith.extui %c8_i32_1 : i32 to i64
    %12 = arith.addi %11, %c0_i64_2 : i64
    %13 = llvm.getelementptr %3[%12] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c0_i32, %13 : i32, !llvm.ptr
    %14 = llvm.load %0 : !llvm.ptr -> f32
    cf.br ^bb2(%14 : f32)
  ^bb2(%15: f32):  // pred: ^bb1
    return %15 : f32
  }
  func.func public @malloc(%arg0: !llvm.ptr, %arg1: i32) -> i32 attributes {llvm.emit_c_interface} {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i32, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c16_i32 = arith.constant 16 : i32
    cf.br ^bb2(%c16_i32 : i32)
  ^bb2(%1: i32):  // pred: ^bb1
    return %1 : i32
  }
  func.func public @malloc_aliasing(%arg0: !llvm.ptr) -> i32 attributes {llvm.emit_c_interface} {
    %c0_i32 = arith.constant 0 : i32
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %0 : i32, !llvm.ptr
    %c1_i64_0 = arith.constant 1 : i64
    %1 = llvm.alloca %c1_i64_0 x i32 : (i64) -> !llvm.ptr
    llvm.store %c0_i32, %1 : i32, !llvm.ptr
    %2 = llvm.getelementptr %arg0[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %3 = llvm.getelementptr %2[0] : (!llvm.ptr) -> !llvm.ptr, !llvm.ptr
    %4 = llvm.load %3 : !llvm.ptr -> !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %c4_i32 = arith.constant 4 : i32
    %5 = call @malloc(%arg0, %c4_i32) : (!llvm.ptr, i32) -> i32
    llvm.store %5, %0 : i32, !llvm.ptr
    %c4_i32_1 = arith.constant 4 : i32
    %6 = call @malloc(%arg0, %c4_i32_1) : (!llvm.ptr, i32) -> i32
    llvm.store %6, %1 : i32, !llvm.ptr
    %7 = llvm.load %0 : !llvm.ptr -> i32
    %c42_i32 = arith.constant 42 : i32
    %c0_i64 = arith.constant 0 : i64
    %8 = arith.extui %7 : i32 to i64
    %9 = arith.addi %8, %c0_i64 : i64
    %10 = llvm.getelementptr %4[%9] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c42_i32, %10 : i32, !llvm.ptr
    %11 = llvm.load %1 : !llvm.ptr -> i32
    %c43_i32 = arith.constant 43 : i32
    %c0_i64_2 = arith.constant 0 : i64
    %12 = arith.extui %11 : i32 to i64
    %13 = arith.addi %12, %c0_i64_2 : i64
    %14 = llvm.getelementptr %4[%13] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    llvm.store %c43_i32, %14 : i32, !llvm.ptr
    %15 = llvm.load %0 : !llvm.ptr -> i32
    %c0_i64_3 = arith.constant 0 : i64
    %16 = arith.extui %15 : i32 to i64
    %17 = arith.addi %16, %c0_i64_3 : i64
    %18 = llvm.getelementptr %4[%17] : (!llvm.ptr, i64) -> !llvm.ptr, !llvm.ptr
    %19 = llvm.load %18 : !llvm.ptr -> i32
    cf.br ^bb2(%19 : i32)
  ^bb2(%20: i32):  // pred: ^bb1
    return %20 : i32
  }
  func.func private @dora_fn_wasm_table_init(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_table_copy(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_table_fill(!llvm.ptr, i32, i32, !llvm.ptr, i32)
  func.func private @dora_fn_wasm_table_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_table_get(!llvm.ptr, i32, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_table_set(!llvm.ptr, i32, i32, !llvm.ptr)
  func.func private @dora_fn_wasm_table_grow(!llvm.ptr, !llvm.ptr, i32, i32) -> i32
  func.func private @dora_fn_wasm_imported_table_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_imported_table_get(!llvm.ptr, i32, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_imported_table_grow(!llvm.ptr, !llvm.ptr, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_init(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_memory_grow(!llvm.ptr, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_copy(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_fill(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_notify(!llvm.ptr, i32, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_wait32(!llvm.ptr, i32, i32, i32, i64) -> i32
  func.func private @dora_fn_wasm_memory_wait64(!llvm.ptr, i32, i32, i64, i64) -> i32
  func.func private @dora_fn_wasm_imported_memory_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_imported_memory_grow(!llvm.ptr, i32, i32) -> i32
  func.func private @dora_fn_wasm_imported_memory_copy(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_imported_memory_fill(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_imported_memory_notify(!llvm.ptr, i32, i32, i32) -> i32
  func.func private @dora_fn_wasm_imported_memory_wait32(!llvm.ptr, i32, i32, i32, i64) -> i32
  func.func private @dora_fn_wasm_imported_memory_wait64(!llvm.ptr, i32, i32, i64, i64) -> i32
  func.func private @dora_fn_wasm_func_ref(!llvm.ptr, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_data_drop(!llvm.ptr, i32)
  func.func private @dora_fn_wasm_elem_drop(!llvm.ptr, i32)
  func.func private @dora_fn_wasm_raise_trap(i32)
}
